fixing spacing and text align for hire us modal

--- a/styles/icons/icons.scss
+++ b/styles/icons/icons.scss
@@ -48,9 +48,12 @@
 }
 
 .questionMarkIcon{
-  font-size: 23px;
-  transform: translateY(2px);
+  font-size: 16px;
+  transform: translateY(6px);
+  @media(min-width: 576px) and (max-width: 767px){
+    transform: translateY(4px);
+  }
   @media(max-width: 575px){
-    font-size: 20px;
+    transform: translateY(4.8px);
   }
 }
